welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur) {
    return false
  } else {
    avance()
    if (getCouleurSOl() == Color.green) {
      return true
    } else {
      return false
    }
  }
}